Android: Option to install only default api levels

--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -170,6 +170,7 @@ stages:
                   skipJdk: false
                   skipAndroidCommonSdks: false
                   skipAndroidPlatformApis: false
+                  onlyAndroidPlatformDefaultApis: true
                   skipAndroidEmulatorImages: true
                   skipAndroidCreateAvds: true
                   skipProvisioning: true
@@ -244,6 +245,7 @@ stages:
                       skipJdk: false
                       skipAndroidCommonSdks: false
                       skipAndroidPlatformApis: false
+                      onlyAndroidPlatformDefaultApis: true
                       skipAndroidEmulatorImages: true
                       skipAndroidCreateAvds: true
                       skipProvisioning: true
@@ -271,6 +273,7 @@ stages:
                 skipJdk: false
                 skipAndroidCommonSdks: false
                 skipAndroidPlatformApis: false
+                onlyAndroidPlatformDefaultApis: true
                 skipAndroidEmulatorImages: true
                 skipAndroidCreateAvds: true
                 skipProvisioning: true
