--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -5,7 +5,9 @@ parameters:
   skipProvisioning: $(skipProvisionator)
   skipJdk: false
   skipAndroidCommonSdks: false
+  onlyAndroidPlatformDefaultApis: false
   skipAndroidPlatformApis: false
+  onlyAndroidPlatformDefaultApis: true # Only install the api's we need
   skipAndroidEmulatorImages: true # For most builds we won't need these
   skipAndroidCreateAvds: true # For most builds we won't need these
   checkoutDirectory: $(System.DefaultWorkingDirectory)
@@ -132,7 +134,7 @@ steps:
   # Provision Android SDK Platform APIs (eg: platforms;android-29, platforms;android-30)
   - ${{ if ne(parameters.skipAndroidPlatformApis, 'true') }}:
     - pwsh: |
-        dotnet build -t:ProvisionAndroidSdkPlatformApiPackages -bl:"$(LogDirectory)/provision-androidsdk-platform-apis.binlog" ./src/Provisioning/Provisioning.csproj
+        dotnet build -t:ProvisionAndroidSdkPlatformApiPackages -p:AndroidSdkProvisionDefaultApiLevelsOnly="$(onlyAndroidPlatformDefaultApis)" -bl:"$(LogDirectory)/provision-androidsdk-platform-apis.binlog" ./src/Provisioning/Provisioning.csproj
       displayName: 'Provision Android SDK - Platform APIs'
       condition: succeeded()
 
