--- a/eng/pipelines/device-tests.yml
+++ b/eng/pipelines/device-tests.yml
@@ -63,29 +63,20 @@ parameters:
   - name: androidPool
     type: object
     default:
-      name: $(androidTestsVmPool)
-      vmImage: $(androidTestsVmImage)
-      demands:
-        - macOS.Name -equals Sonoma
-        - macOS.Architecture -equals x64
+      name: $(macosTestsVmPool)
+      vmImage: $(macosTestsVmImage)
 
   - name: iosPool
     type: object
     default:
-      name: $(iosDeviceTestsVmPool)
-      vmImage: $(iosDeviceTestsVmImage)
-      demands:
-        - Agent.OSVersion -equals 14.5
-        - Agent.OSArchitecture -equals ARM64
+      name: $(macosTestsVmPool)
+      vmImage: $(macosTestsVmImage)
         
   - name: catalystPool
     type: object
     default:
-      name: $(iosDeviceTestsVmPool)
-      vmImage: $(iosDeviceTestsVmImage)
-      demands:
-        - Agent.OSVersion -equals 14.5
-        - Agent.OSArchitecture -equals ARM64
+      name: $(macosTestsVmPool)
+      vmImage: $(macosTestsVmImage)
 
   - name: windowsPool
     type: object
