--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -43,15 +43,15 @@ steps:
     displayName: 'Restore .NET Tools'
 
   # Prepare macOS
-  - ${{ if ne(parameters.poolName, 'Azure Pipelines') }}:
-    - template: agent-cleanser/v1.yml@yaml-templates
-      parameters:
-        condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-        UninstallMono: false
-        UninstallXamarinMac: false
-        CleanseAgentToolsDotNet: true           # Cleanse all .NET versions under the agent tools directory and use only those provisioned by the pipeline
-        SelfHealPowerShell: false
-        AUTH_TOKEN_GITHUB_COM: $(github--pat--vs-mobiletools-engineering-service2)
+  # - ${{ if ne(parameters.poolName, 'Azure Pipelines') }}:
+  #   - template: agent-cleanser/v1.yml@yaml-templates
+  #     parameters:
+  #       condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
+  #       UninstallMono: false
+  #       UninstallXamarinMac: false
+  #       CleanseAgentToolsDotNet: true           # Cleanse all .NET versions under the agent tools directory and use only those provisioned by the pipeline
+  #       SelfHealPowerShell: false
+  #       AUTH_TOKEN_GITHUB_COM: $(github--pat--vs-mobiletools-engineering-service2)
 
   # Provision Xcode
   - ${{ if ne(parameters.skipXcode, 'true') }}:
