--- a/eng/Tools.props
+++ b/eng/Tools.props
@@ -9,7 +9,22 @@
       WorkingDirectory="$(RepoRoot)"
       EnvironmentVariables="DOTNET_MULTILEVEL_LOOKUP=0" />
 
-    <Message Text="Provisioning Android SDK..." Importance="high" />
-    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdk -bl:&quot;$(LogDirectory)/provision-appium.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+    <!-- <Message Text="Provisioning Java JDK..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionJdk -bl:&quot;$(LogDirectory)/provision-jdk.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+
+    <Message Text="Provisioning Android SDK - Common Packages..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdkCommonPackages -bl:&quot;$(LogDirectory)/provision-androidsdk-common.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+
+    <Message Text="Provisioning Android SDK - Platform API Packages..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdkPlatformApiPackages -bl:&quot;$(LogDirectory)/provision-androidsdk-platform-apis.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+
+    <Message Text="Provisioning Android SDK - Emulator Images..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdkEmulatorImagePackages -bl:&quot;$(LogDirectory)/provision-androidsdk-emulator-images.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+
+    <Message Text="Provisioning Android SDK - Create AVDs..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdkAvdCreateAvds -bl:&quot;$(LogDirectory)/provision-androidsdk-create-avds.binlog&quot;" WorkingDirectory="$(RepoRoot)" />
+
+    <Message Text="Provisioning Appium..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAppium -bl:&quot;$(LogDirectory)/provision-appium.binlog&quot;" WorkingDirectory="$(RepoRoot)" /> -->
   </Target>
 </Project>
