Just set xcode on the macs

--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -69,7 +69,7 @@ jobs:
     - template: provision.yml
       parameters:
         checkoutDirectory: ${{ parameters.checkoutDirectory }}
-        skipXcode: ${{ ne('${{ PLATFORM_NAME }}', 'macos') }}
+        skipXcode: false
         skipProvisioning: true
 
     - task: DownloadBuildArtifacts@0
