--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -54,11 +54,14 @@ steps:
           SKIP_ANDROID_API_SDKS: 'true'
         ${{ if eq(parameters.skipAndroidImages, true) }}:
           SKIP_ANDROID_API_IMAGES: 'true'
+        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
+          INSTALL_DEFAULT_ANDROID_API: 'true'
 
   # Setup JDK Paths (gradle needs it)
   - bash: |
-      echo "##vso[task.setvariable variable=JI_JAVA_HOME]$(JAVA_HOME_11_X64)"
-      echo "##vso[task.setvariable variable=JAVA_HOME]$(JAVA_HOME_11_X64)"
+      echo "##vso[task.setvariable variable=JI_JAVA_HOME]$(JAVA_HOME_17_X64)"
+      echo "##vso[task.setvariable variable=JAVA_HOME]$(JAVA_HOME_17_X64)"
+    #  brew install --cask microsoft-openjdk@17
     displayName: 'Setup JDK Paths'
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))  
   # Configure VS Mac for Xcode
@@ -88,6 +91,8 @@ steps:
           SKIP_ANDROID_API_SDKS: 'true'
         ${{ if eq(parameters.skipAndroidImages, true) }}:
           SKIP_ANDROID_API_IMAGES: 'true'
+        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
+          INSTALL_DEFAULT_ANDROID_API: 'true'
 
   - pwsh: |
       if ($env:JAVA_HOME_11_X64) {
