--- a/src/Controls/tests/browserstack/BrowserStack.TestCases.Android.Tests/BrowserStack.Controls.TestCases.Android.Tests.csproj
+++ b/src/Controls/tests/browserstack/BrowserStack.TestCases.Android.Tests/BrowserStack.Controls.TestCases.Android.Tests.csproj
@@ -12,11 +12,12 @@
   <Import Project="..\..\AppiumTests.targets" />
 
   <ItemGroup>
+    <!-- This is needed to avoid "Microsoft.VisualStudio.TestPlatform.ObjectModel.TestPlatformException: Could not find testhost" -->
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 
     <!-- When bumping, you'll also need to mirror the latest version via https://github.com/dotnet/arcade/blob/main/Documentation/MirroringPackages.md -->
     <!-- Note that BrowserStack.TestAdapter also pulls in, at build time, the latest version https://www.nuget.org/packages/browserstack-sdk -->
-    <PackageReference Include="BrowserStack.TestAdapter" Version="0.13.2" />
+    <PackageReference Include="BrowserStack.TestAdapter" Version="0.13.3" />
   </ItemGroup>
 
   <ItemGroup>
