Add condition for skipping appium doctor

--- a/eng/pipelines/common/ui-tests-steps.yml
+++ b/eng/pipelines/common/ui-tests-steps.yml
@@ -10,6 +10,7 @@ parameters:
   configuration : "Release"
   runtimeVariant : "Mono"
   testFilter: ''
+  skipAppiumDoctor: ${{ eq(variables['Agent.OS'], 'Darwin') }}
 
 steps:
   - task: DownloadPipelineArtifact@2
@@ -82,7 +83,7 @@ steps:
     displayName: "Install node"
 
   - pwsh: |
-      dotnet build ./src/Provisioning/Provisioning.csproj -t:ProvisionAppium -bl:"$(LogDirectory)/provision-appium.binlog"
+      dotnet build ./src/Provisioning/Provisioning.csproj -t:ProvisionAppium -p:SkipAppiumDoctor="${{ parameters.skipAppiumDoctor }}" -bl:"$(LogDirectory)/provision-appium.binlog"
     displayName: "Install Appium"
     continueOnError: false
     retryCountOnTaskFailure: 1
