--- a/NuGet.config
+++ b/NuGet.config
@@ -4,6 +4,11 @@
   <!-- `clear` ensures no additional sources are inherited from another config file. -->
   <packageSources>
     <clear />
+    <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
+    <!--  Begin: Package sources from dotnet-android -->
+    <add key="darc-pub-dotnet-android-34ad867" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-34ad867d/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-android -->
+    <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
     <add key="local" value="LOCAL_PLACEHOLDER" />
     <add key="nuget-only" value="NUGET_ONLY_PLACEHOLDER" />
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" protocolVersion="3" />
