--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -50,7 +50,7 @@ jobs:
   - job: build_maui_templates_${{ category }}
     workspace:
       clean: all
-    displayName: 'Build ${{ category }}: '
+    displayName: 'Build ${{ category }}: macOS' 
     timeoutInMinutes: 240
     condition: ${{ parameters.condition}}
     pool: ${{ parameters.MacBuildPool}}
